Initial Angular setup

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 
 /config/database.yml
 /config/secrets.yml
+
+public/images/BaconCatBug's Set Symbol Megapack - SVG - 25 Oct 2013/
+public/images/BaconCatBugs Set Symbol Megapack - SVG - 25 Oct 2013.zip
+public/images/FAQ by BaconCatBug.txt
