Replace bootstrap with foundation

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 public/images/BaconCatBug's Set Symbol Megapack - SVG - 25 Oct 2013/
 public/images/BaconCatBugs Set Symbol Megapack - SVG - 25 Oct 2013.zip
 public/images/FAQ by BaconCatBug.txt
+mtg-card-browser.sublime-project
+mtg-card-browser.sublime-workspace
